--- a/HTML_e_CSS_para_iniciantes/exercicio03/css/style.css
+++ b/HTML_e_CSS_para_iniciantes/exercicio03/css/style.css
@@ -48,7 +48,6 @@ h3 {
   text-align: right;
   display: grid;
   place-content: center;
-  
 }
 
 .bg-white {
@@ -76,6 +75,16 @@ h3 {
   font-size: 64px;
   padding: 40px;
   color: #c6c6c6;
+}
+
+.rectangle {
+  width: 120px;
+  height: 6px;
+  background: #ee2211;
+  position: absolute;
+  position: absolute;
+  margin-top: 28px;
+  left: 47%;
 }
 
 footer {
