--- a/HTML_e_CSS_para_iniciantes/aula/styles.css
+++ b/HTML_e_CSS_para_iniciantes/aula/styles.css
@@ -1,49 +1,27 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
+img {
+  max-width: 100%;
+  display: block;
 }
 
-h1::before {
-  content: "";
-  display: inline-block;
-  width: 60px;
-  height: 4px;
-  background: red;
-  margin-right: 1.2rem;
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  max-width: 900px;
+  margin: 100px auto;
 }
 
-h1::after {
-  content: "";
-  display: inline-block;
-  width: 60px;
-  height: 4px;
-  background: red;
-  margin-left: 1.2rem;
+.cover img {
+  height: 100%;
+  object-fit: cover;
+  object-position: top left;
 }
 
-li {
-  font-size: 1.5rem;
-  display: flex;
-  align-items: center;
-}
-
-ul {
-  list-style: none;
-}
-
-li::before {
-  content: "";
-  display: inline-block;
-  width: 8px;
-  height: 8px;
-  background: linear-gradient(#caf, #6a049a);
-  border: 2px solid rgb(158, 11, 158);
-  border-radius: 50%;
+.texto {
+  align-self: center;
 }
 
 p {
-  font-size: 1rem;
-}
-
-p::first-letter {
-  font-size: 1.5rem;
+  max-width: 60ch;
+  font-size: 1.2rem;
 }
